# AutoPLM

./: .env.development  .env.production  .gitignore  .replit  PLANO_ATOMICO_24_02.md  PLANO_IMPLEMENTACAO.md  PLANO_IMPLEMENTACAO_FLUXOGAMA.md  README.md  _inspect_ficha.py  _inspect_output.txt  app.py  bundle.txt  check_db.py  check_dev.py  check_fichas.py  create_bundle.py  debug_columns.py  debug_parse.py  fix_missing_cols.py  fix_raw_row.py  flux_retorno_raw.html  generate_thumbnails_script.py  migrate_dev.py  migrate_drawings.py  migrate_oaz_columns.py  migrate_source_name.py  migrate_templates.py  probe_fluxogama.py  probe_output.txt  pyproject.toml  replit.md  requirements.txt  run.py  test_dedup_dryrun.py  test_excel_parser.py  test_extraction.py  test_flux_api.py  test_fluxogama_endpoints.py  test_oaz_endpoints.py  test_output.txt  (+2 more)
app/: __init__.py  config.py  extensions.py
attached_assets/: Pasted--Build-complete-prompt-REVISADO-mais-r-gido-e-anti-viagens-prompt-f-TAREFA-Gerar-um-DES-1761076095680_1761076095681.txt  Pasted--Debugger-PIN-404-939-739-172-31-75-162-15-Sep-2025-16-15-52-GET-HTTP-1-1-302-home-r-1757953149726_1757953149727.txt  Pasted--user-User-query-get-session-user-id-172-31-74-194-21-Oct-2025-16-06-18-GET-dashboar-1761062918446_1761062918446.txt  (+19 more)
attached_assets/rpa_monitor_client/: README.md  pyproject.toml
attached_assets/rpa_monitor_client/rpa_monitor_client/: __init__.py  _client.py  _commands.py  _config.py  _logging_api.py
attached_assets/rpa_monitor_client/rpa_monitor_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+164 files in other folders)
