[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "openai>=1.107.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
]
