[project]
name = "rpa-monitor-client"
version = "0.1.0"
description = "Cliente RPA para enviar heartbeats e logs para o servidor de monitoramento (suporte TCP e WebSocket)"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Andrey Barreto" }
]

dependencies = [
  "websockets>=12.0",
  "croniter>=1.4.0",
]


[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rpa_monitor_client"]
